Slight osu-page cleanup

--- a/resources/assets/less/bem/contest-voting-list.less
+++ b/resources/assets/less/bem/contest-voting-list.less
@@ -21,7 +21,7 @@
   &__table {
     width: 100%;
     max-width: (600px + 40px);
-    padding: 0px 20px;
+    padding: 20px;
     margin: 0 auto;
   }
 
