--- a/resources/assets/less/bem/contest-userentry-list.less
+++ b/resources/assets/less/bem/contest-userentry-list.less
@@ -19,8 +19,7 @@
 .contest-userentry-list {
   display: flex;
   flex-wrap: wrap;
-  background-color: @osu-colour-b6;
   color: white;
-  padding: 10px 10px 0;
+  padding: 10px;
   text-align: center;
 }
