--- a/resources/assets/less/bem/contest.less
+++ b/resources/assets/less/bem/contest.less
@@ -18,13 +18,13 @@
 
 .contest {
   @_top: contest;
-  background-color: @osu-colour-b4;
+  background-color: @osu-colour-b5;
   color: white;
 
   &__description {
     .content-font();
 
-    background-color: @osu-colour-b5;
+    background-color: @osu-colour-b4;
     color: white;
     font-size: 14px;
     font-weight: 300;
@@ -41,7 +41,7 @@
   }
 
   &__countdown-timer {
-    background-color: @osu-colour-b5;
+    background-color: @osu-colour-b4;
     padding-bottom: 20px;
     margin-top: -10px;
   }
@@ -53,7 +53,7 @@
   }
 
   &__accordion {
-    background: @osu-colour-b6;
+    background: @osu-colour-b5;
     padding: 20px;
   }
 
@@ -109,7 +109,7 @@
   &__vote-summary-text {
     float: right;
     text-transform: uppercase;
-    color: @osu-colour-l1;
+    color: @osu-colour-b1;
     font-weight: bold;
     height: 16px;
     display: flex;
