--- a/resources/assets/less/bem/tracklist.less
+++ b/resources/assets/less/bem/tracklist.less
@@ -98,7 +98,7 @@
 
   &__preview {
     background-color: rgba(0,0,0,0.75);
-    color: @osu-colour-d1;
+    color: @osu-colour-b1;
     width: 32px;
     height: 32px;
     display: flex;
