Tweak colours in featured artist section

--- a/resources/assets/less/bem/artist.less
+++ b/resources/assets/less/bem/artist.less
@@ -19,7 +19,7 @@
 .artist {
   @_top: artist;
   &__index {
-    background-color: @osu-colour-b4;
+    background-color: @osu-colour-b5;
     padding: 10px;
     font-weight: 300;
     .default-box-shadow();
@@ -141,13 +141,13 @@
   }
 
   &__track-count {
-    color: @osu-colour-d1;
+    color: @osu-colour-b1;
     font-size: 12px;
     text-align: center;
   }
 
   &__description {
-    background-color: @osu-colour-b5;
+    background-color: @osu-colour-b4;
     color: white;
     font-size: 14px;
     font-weight: 300;
