--- a/resources/assets/less/bem/tracklist.less
+++ b/resources/assets/less/bem/tracklist.less
@@ -28,8 +28,7 @@
 
   &__row {
     background-color: @osu-colour-b5;
-    color: @osu-colour-l2;
-    font-weight: 100;
+    color: @osu-colour-b1;
     font-size: 12px;
     border-bottom: 2px solid @osu-colour-b6;
     transition: 0.1s;
@@ -54,7 +53,7 @@
 
   &__row--header {
     text-transform: uppercase;
-    color: @osu-colour-l1;
+    color: @osu-colour-b1;
     font-size: 10px;
     line-height: 32px;
     background: @osu-colour-b6;
@@ -138,7 +137,7 @@
   }
 
   &__version {
-    color: @osu-colour-l2;
+    color: @osu-colour-b1;
     font-size: 10px;
   }
 
