User dashboard colour tweaks

--- a/resources/assets/less/bem/user-home-beatmapset.less
+++ b/resources/assets/less/bem/user-home-beatmapset.less
@@ -20,9 +20,7 @@
   .link-plain();
   .own-layer();
   display: flex;
-
-  color: #222;
-
+  color: @osu-colour-b5;
   transition: 0.1s;
 
   // undo padding from container
@@ -39,7 +37,7 @@
   }
 
   &:hover {
-    background-color: @osu-colour-b2;
+    background-color: @osu-colour-b3;
     color: #fff;
   }
 
@@ -81,7 +79,7 @@
   }
 
   &__playcount {
-    color: @osu-colour-l1;
+    color: @osu-colour-b1;
   }
 
   &__title {
