Tweak contest index colours

--- a/resources/assets/less/bem/contest-list-item.less
+++ b/resources/assets/less/bem/contest-list-item.less
@@ -84,7 +84,7 @@
     @media @mobile {
       font-size: 10px;
     }
-    color: @osu-colour-l1;
+    color: @osu-colour-b1;
   }
 
   &__image {
@@ -128,7 +128,7 @@
   }
 
   &__type {
-    color: @osu-colour-l1;
+    color: @osu-colour-b1;
     text-transform: capitalize;
     font-size: 15px;
     @media @mobile {
