Tweak changelog/comment colours

--- a/resources/assets/less/bem/comment-editor.less
+++ b/resources/assets/less/bem/comment-editor.less
@@ -23,9 +23,6 @@
   @_spacing: 10px;
   @_border-radius: @border-radius-large;
 
-  @_bg-message: #fff;
-  @_bg-footer: #eee;
-
   border-radius: @_border-radius;
   display: flex;
   flex-direction: column;
@@ -63,7 +60,7 @@
     font-size: @font-size--normal;
     flex: none;
     margin: 5px 2px;
-    color: @osu-colour-l1;
+    color: white;
 
     &--notice {
       align-self: center;
