--- a/resources/assets/less/bem/comments.less
+++ b/resources/assets/less/bem/comments.less
@@ -37,6 +37,7 @@
     font-style: normal;
     font-weight: bold;
     background-color: @osu-colour-b6;
+    color: @osu-colour-b1;
   }
 
   &__items {
