Tweak user settings colours

--- a/resources/assets/less/bem/account-edit-entry.less
+++ b/resources/assets/less/bem/account-edit-entry.less
@@ -129,7 +129,7 @@
     display: none;
     margin-top: 5px;
     width: 100%;
-    color: @yellow;
+    color: @osu-colour-u;
     padding-left: 10px;
 
     @media @desktop {
@@ -163,7 +163,7 @@
     }
 
     &:focus {
-      border-color: @yellow;
+      border-color: @osu-colour-u;
     }
 
     .@{top}[data-form-error-state=error] & {
@@ -181,7 +181,7 @@
     padding-bottom: 5px;
     order: -1;
     font-weight: bold;
-    color: @osu-colour-l1;
+    color: @osu-colour-b1;
 
     @media @desktop {
       align-self: center;
@@ -196,7 +196,7 @@
     }
 
     *:focus ~ & {
-      color: #fff;
+      color: @osu-colour-l1;
     }
   }
 
