--- a/resources/assets/less/bem/block-list.less
+++ b/resources/assets/less/bem/block-list.less
@@ -21,8 +21,7 @@
   flex-grow: 1;
 
   &__toggle {
-    color: @osu-colour-l1;
-    .link-hover({ color: white });
+    .link-inverted();
   }
 
   &__content {
