--- a/resources/assets/less/bem/tournament-list-item.less
+++ b/resources/assets/less/bem/tournament-list-item.less
@@ -71,7 +71,7 @@
     }
 
     &__registration-date {
-      color: @osu-colour-l1;
+      color: @osu-colour-b1;
       font-size: 12px;
 
       @media @mobile {
@@ -80,7 +80,7 @@
     }
 
     &__registrations {
-      color: @osu-colour-l1;
+      color: @osu-colour-b1;
       font-size: 15px;
 
       @media @mobile {
