Search colour tweaks

--- a/resources/assets/less/bem/paginator.less
+++ b/resources/assets/less/bem/paginator.less
@@ -33,12 +33,10 @@
     .center-content();
 
     .link-plain();
-    color: white;
-    .link-hover({ color: @osu-colour-l1 });
+    .link-inverted();
 
     &--current {
       color: @osu-colour-l1;
-      .link-hover({ color: @osu-colour-l1 });
       font-weight: bold;
     }
 
