Remove usages of D1 colour

--- a/resources/assets/less/bem/livestream-item.less
+++ b/resources/assets/less/bem/livestream-item.less
@@ -58,7 +58,7 @@
     font-weight: 600;
 
     &--detail {
-      color: @osu-colour-d1;
+      color: @osu-colour-b1;
       font-size: @font-size--livestream-item-detail;
     }
 
