--- a/resources/assets/less/bem/update-streams-v2.less
+++ b/resources/assets/less/bem/update-streams-v2.less
@@ -77,7 +77,7 @@
 
     &--users {
       font-size: @font-size--small;
-      color: @osu-colour-d1;
+      color: @osu-colour-b1;
     }
 
     &--version {
