--- a/resources/assets/less/bem/btn-circle.less
+++ b/resources/assets/less/bem/btn-circle.less
@@ -35,6 +35,7 @@
   &:hover,
   &:active {
     color: #fff;
+    background-color: @osu-colour-l1;
     text-decoration: none;
     box-shadow: 0 5px 15px fade(#000, 40%);
   }
@@ -82,13 +83,13 @@
   }
 
   &--activated, &.js-activated {
-    background-color: @osu-colour-l1;
-    color: #000;
+    background-color: @osu-colour-d;
+    color: white;
 
     &:focus,
     &:hover,
     &:active {
-      color: #000;
+      color: white;
     }
   }
 
