--- a/resources/assets/less/bem/bbcode-spoilerbox.less
+++ b/resources/assets/less/bem/bbcode-spoilerbox.less
@@ -18,12 +18,16 @@
 
 .bbcode-spoilerbox {
   @_top: bbcode-spoilerbox;
-  @_profile-page: bbcode--profile-page;
 
   &__arrow {
     display: inline-block;
-    color: @osu-colour-l1;
+    color: @osu-colour-b1;
     margin-right: 5px;
+
+    //TODO: remove after forum restyle
+    .forum-post__content & {
+      .link-old();
+    }
 
     .@{_top}.js-spoilerbox--open & {
       transform: rotate(90deg);
@@ -36,12 +40,13 @@
     .@{_top}.js-spoilerbox--open & {
       .default-border-radius();
       display: block;
-      background: #ddd;
+      background: @osu-colour-b6;
       padding: 20px;
       margin-top: 4px;
 
-      .@{_profile-page} & {
-        background-color: @osu-colour-b6;
+      //TODO: remove after forum restyle
+      .forum-post__content & {
+        background: #ddd;
       }
     }
   }
@@ -50,5 +55,10 @@
     .reset-input();
     .link-default();
     font-weight: bold;
+
+    //TODO: remove after forum restyle
+    .forum-post__content & {
+      .link-old();
+    }
   }
 }
