--- a/resources/assets/less/colors.less
+++ b/resources/assets/less/colors.less
@@ -83,8 +83,8 @@
 @light-gray: #f5f5f5;
 
 // osu!palette 2019v2-final-copy-last-FINAL
-// the default hue is osu! pink (333) and is injected into the body via master.blade.php:
-//   <style>:root {--base-hue: {{ $currentSectionHue }} ;}</style>
+// The default hue is osu! pink (333) and is injected into the body via master.blade.php as var(--base-hue) within :root
+// The section-to-colour mapping is done via section_to_hue_map() in helpers.php
 @osu-colour-u: hsl(var(--base-hue), 100%, 70%);
 @osu-colour-p: hsl(var(--base-hue), 100%, 50%);
 @osu-colour-d: hsl(var(--base-hue), 50%, 45%);
@@ -104,7 +104,8 @@
 @osu-colour-b5: hsl(var(--base-hue), 10%, 15%);
 @osu-colour-b6: hsl(var(--base-hue), 10%, 10%);
 
-// this is... not great, but not sure of a better way to do this.
+// Use this instead of fade(colour, amount) - LESS tries to parse the css var as a colour and fails.
+// This is not ideal, but not sure of a better way to do this (without modifying LESS at least)
 .osu-hsla(@colour, @alpha) {
   @string: replace("@{colour}", "hsl\(([^,]+), ([^,]+), ([^,]+)\)", "hsla($1, $2, $3, @{alpha})");
   @hsla: ~"@{string}";
