Remove last usages of D* colours and tweaks to suit

--- a/resources/assets/less/bem/osu-md.less
+++ b/resources/assets/less/bem/osu-md.less
@@ -27,7 +27,7 @@
   word-wrap: break-word;
 
   hr {
-    border-color: @osu-colour-d3;
+    border-color: @osu-colour-b3;
   }
 
   iframe {
@@ -95,7 +95,7 @@
     &--2 {
       font-size: @font-size--header-wiki-2;
       margin: 20px 0 10px -20px;
-      color: @osu-colour-l1;
+      color: white;
 
       .@{top}--news & {
         font-size: @font-size--title;
@@ -188,7 +188,7 @@
   }
 
   &__table-data {
-    border-top: 1px solid @osu-colour-d5;
+    border-top: 1px solid @osu-colour-b4;
     padding: 5px;
 
     &--center {
@@ -197,7 +197,7 @@
 
     &--header {
       border-top: none;
-      border-bottom: 2px solid @osu-colour-d6;
+      border-bottom: 2px solid @osu-colour-b3;
       font-weight: bold;
     }
 
@@ -212,14 +212,15 @@
 
   code {
     .default-border-radius();
-    background-color: @osu-colour-b5;
+    background-color: @osu-colour-b2;
     border: 1px solid @osu-colour-b6;
-    color: @osu-colour-d;
+    color: @osu-colour-b6;
     padding: 1px 4px;
   }
 
   pre {
-    background-color: @osu-colour-b5;
+    background-color: @osu-colour-b2;
+    color: @osu-colour-b6;
     border: none;
     border-radius: 0px;
 
