Fix 'show more' button when hovering notifications

--- a/resources/assets/less/bem/notification-popup-item.less
+++ b/resources/assets/less/bem/notification-popup-item.less
@@ -153,6 +153,15 @@
       font-size: @font-size--small;
       color: @osu-colour-l1;
     }
+
+    .@{_top}:hover & {
+      .show-more-link {
+         background-color: @osu-colour-b1;
+         &:hover {
+           background-color: @osu-colour-b3;
+         }
+      }
+    }
   }
 
   &__side-buttons {
