Fix chat action colour

--- a/resources/assets/less/bem/chat-message-group.less
+++ b/resources/assets/less/bem/chat-message-group.less
@@ -85,7 +85,7 @@
     }
 
     &--action {
-      color: @osu-colour-u;
+      color: @osu-colour-l1;
       font-style: italic;
 
       &::before {
