Fixes to the beatmap page

--- a/resources/assets/less/bem/beatmap-score-top.less
+++ b/resources/assets/less/bem/beatmap-score-top.less
@@ -132,7 +132,7 @@
     font-style: italic;
     font-weight: 700;
     margin-bottom: 2px;
-    color: @osu-colour-l1;
+    color: white;
     display: block;
     margin-right: 10px;
   }
