--- a/resources/assets/less/bem/beatmapset-info.less
+++ b/resources/assets/less/bem/beatmapset-info.less
@@ -49,6 +49,11 @@
     }
 
     &--meta {
+      // TODO: remove once default link style becomes... default
+      a {
+        .link-default();
+      }
+
       @media @desktop {
         width: 175px;
         overflow: hidden;
