Add verification link

--- a/resources/assets/less/bem/oauth-form.less
+++ b/resources/assets/less/bem/oauth-form.less
@@ -160,6 +160,12 @@
       margin-bottom: 25px;
     }
 
+    &--verification-completed {
+      display: block;
+      margin-top: -20px; // undo --title
+      margin-bottom: 50px;
+    }
+
     &--wrong-user {
       display: block;
       font-size: @font-size--normal;
