--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -19,6 +19,7 @@
 @import "bem/account-edit";
 @import "bem/account-edit-entry";
 @import "bem/account-edit-status";
+@import "bem/account-verification-completed";
 @import "bem/admin-contest";
 @import "bem/admin-contest-entry";
 @import "bem/admin-menu";
