supporter renewal wip

--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -298,6 +298,7 @@
 @import "bem/status-recent";
 @import "bem/stg-block";
 @import "bem/stg-header";
+@import "bem/stg-heart";
 @import "bem/stg-perk";
 @import "bem/stg-quote";
 @import "bem/stg-status";
