--- a/resources/assets/less/bem/stg-quote.less
+++ b/resources/assets/less/bem/stg-quote.less
@@ -20,17 +20,10 @@
   .default-box-shadow();
   .inner-shadow-top();
   padding: 30px 40px 15px 90px;
-  background-color: #fff;
+  background-color: @osu-colour-b4;
+  color: white;
   font-size: @font-size--normal;
   font-style: italic;
-
-  &__bg {
-    position: absolute;
-    color: #ddd;
-    font-size: 60px;
-    left: 30px;
-    top: 0;
-  }
 
   &__content {
     margin: 0;
