--- a/resources/assets/less/bem/osu-page.less
+++ b/resources/assets/less/bem/osu-page.less
@@ -194,6 +194,13 @@
     margin: 10px 0;
   }
 
+  &--supporter {
+    .default;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 50px;
+  }
+
   &--tournament {
     @media @desktop {
       .width-desktop(20px);
