--- a/resources/assets/less/bem/stg-block.less
+++ b/resources/assets/less/bem/stg-block.less
@@ -17,22 +17,65 @@
  */
 
 .stg-block {
-  background-color: #ddd;
+  background: @osu-colour-b5;
   padding: 30px;
 
-  .inner-shadow-top();
-
   &--convinced {
-    background-color: #fff;
-    text-align: center;
+    .at2x-simple('/images/layout/supporter/banner-bg.jpg');
+    background-size: cover;
+    width: auto;
+    height: 480px;
+    background-position: center;
+
+    &::before {
+      content: ' ';
+      .full-size();
+      background: linear-gradient(to bottom, .osu-hsla(@osu-colour-b5, 1)[@hsla] 4%, .osu-hsla(@osu-colour-b5, 0)[@hsla] 100%);
+    }
+
+    &::after {
+      content: ' ';
+      .full-size();
+      .at2x-simple('/images/layout/supporter/banner-fg.png');
+      background-size: cover;
+      background-position: center;
+    }
+  }
+
+  &--big-feature {
+    background-color: @osu-colour-b4;
   }
 
   &--features {
-    background-color: #eee;
+    background-color: @osu-colour-b3;
+  }
+
+  &--features-2 {
+    background-color: @osu-colour-b5;
   }
 
   &--top {
     box-shadow: none;
+  }
+
+  &__box {
+    background: @osu-colour-b4;
+    width: 350px;
+    padding: 50px;
+    text-align: center;
+    height: 100%;
+    margin: 10px 0px;
+    border-radius: 15px;
+
+    @media @mobile {
+      z-index: 1;
+      background: .osu-hsla(@osu-colour-b4, 0.9)[@hsla];
+      width: 100%;
+    }
+  }
+
+  &__link {
+    .link-plain();
   }
 
   &__perks {
@@ -40,31 +83,38 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+
+    &--imglist {
+      flex-direction: column;
+      align-items: center;
+    }
   }
 
   &__run {
     font-size: @font-size--title-small;
     font-style: italic;
-    color: #555;
+    color: @osu-colour-l1;
     margin: 10px 0 0;
 
     &--main {
-      font-size: @font-size--large;
-      font-weight: bold;
+      font-size: 26px;
+      font-weight: normal;
+      margin-top: 40px;
     }
 
     &--sub-1 {
       margin-top: 0;
+      color: @osu-colour-b1;
     }
 
     &--sub-2 {
-      color: #999;
+      margin-top: 40px;
     }
   }
 
   &__title {
     font-size: @font-size--title;
-    color: @pink-darker;
+    color: @osu-colour-l1;
     font-style: italic;
     margin: 0 0 30px;
     text-align: center;
