Fix profile cover uploader separator line

--- a/resources/assets/less/bem/profile-cover-uploader.less
+++ b/resources/assets/less/bem/profile-cover-uploader.less
@@ -17,7 +17,7 @@
  */
 
 .profile-cover-uploader {
-  border-top: @osu-colour-b1;
+  border-top: 1px solid @osu-colour-b5;
   padding: 10px;
   display: flex;
   flex-direction: column;
