Fix style issues with modding - pin button and disabled button styles

--- a/resources/assets/less/bem/beatmap-discussion-post.less
+++ b/resources/assets/less/bem/beatmap-discussion-post.less
@@ -332,7 +332,7 @@
 
   &__user-stripe {
     align-self: stretch;
-    background-color: @user-color-default;
+    background-color: @osu-colour-l1;
     border-radius: 1px;
     flex: none;
     width: 2px;
