--- a/resources/assets/less/bem/btn-circle.less
+++ b/resources/assets/less/bem/btn-circle.less
@@ -84,12 +84,13 @@
 
   &--activated, &.js-activated {
     background-color: @osu-colour-d;
-    color: white;
+    color: @osu-colour-b5;
 
     &:focus,
     &:hover,
     &:active {
-      color: white;
+      background-color: @osu-colour-l3;
+      color: @osu-colour-b5;
     }
   }
 
