--- a/resources/assets/less/bem/btn-osu-big.less
+++ b/resources/assets/less/bem/btn-osu-big.less
@@ -46,12 +46,8 @@
   }
 
   &[disabled] {
-    &::before {
-      .full-size();
-      content: ' ';
-      border-radius: inherit;
-      background-color: @osu-colour-b1;
-    }
+    background-color: @osu-colour-b3;
+    color: @osu-colour-b1;
   }
 
   &--account-edit {
