Comment colour tweaks

--- a/resources/assets/less/bem/comment.less
+++ b/resources/assets/less/bem/comment.less
@@ -51,7 +51,7 @@
     .reset-input();
     .link-default();
     text-transform: lowercase;
-    color: @osu-colour-b2;
+    color: @osu-colour-b1;
     .link-hover({ color: white });
 
     &:hover {
@@ -59,7 +59,7 @@
     }
 
     &--active {
-      color: @green;
+      color: @osu-colour-l1;
     }
   }
 
