--- a/resources/assets/less/bem/header-v3.less
+++ b/resources/assets/less/bem/header-v3.less
@@ -56,6 +56,7 @@
 
     .@{_top}--chat & {
       .at2x-simple('/images/headers/chat.jpg');
+      filter: hue-rotate(115deg);
     }
 
     .@{_top}--news & {
