Rename osu-colour-u -> osu-colour-h1

--- a/resources/assets/less/base.less
+++ b/resources/assets/less/base.less
@@ -200,7 +200,7 @@ select.form-control {
 
 // hopefully this is just a placeholder until the new button design is implemented...
 .btn-osu-default {
-  background-color: @osu-colour-u;
+  background-color: @osu-colour-h1;
   box-shadow: 0 10px @osu-colour-d, 0 7px 10px fade(#000, 80%);
   margin-bottom: 10px;
   overflow: hidden; // hide the &::before highlight layer
