--- a/resources/assets/less/bem/account-edit-entry.less
+++ b/resources/assets/less/bem/account-edit-entry.less
@@ -129,7 +129,7 @@
     display: none;
     margin-top: 5px;
     width: 100%;
-    color: @osu-colour-u;
+    color: @osu-colour-h1;
     padding-left: 10px;
 
     @media @desktop {
@@ -163,7 +163,7 @@
     }
 
     &:focus {
-      border-color: @osu-colour-u;
+      border-color: @osu-colour-h1;
     }
 
     .@{top}[data-form-error-state=error] & {
