--- a/resources/assets/less/bem/bar.less
+++ b/resources/assets/less/bem/bar.less
@@ -111,7 +111,7 @@
 
     .@{_top}--user-profile & {
       border-radius: 10000px;
-      background-color: @osu-colour-u;
+      background-color: @osu-colour-h1;
     }
   }
 
