--- a/resources/assets/less/bem/fancy-graph.less
+++ b/resources/assets/less/bem/fancy-graph.less
@@ -18,8 +18,8 @@
 
 .fancy-graph {
   &__circle {
-    stroke: @osu-colour-u;
-    fill: @osu-colour-u;
+    stroke: @osu-colour-h1;
+    fill: @osu-colour-h1;
     pointer-events: none;
     stroke-width: 1px;
   }
@@ -31,7 +31,7 @@
 
   &__line {
     fill: none;
-    stroke: @osu-colour-u;
+    stroke: @osu-colour-h1;
     stroke-width: 1px;
   }
 }
