--- a/resources/assets/less/bem/game-mode-link.less
+++ b/resources/assets/less/bem/game-mode-link.less
@@ -20,7 +20,7 @@
   .default-text-shadow();
   .link-plain();
   font-size: @font-size--title-small-4;
-  color: @osu-colour-u;
+  color: @osu-colour-h1;
   padding: 0 10px;
 
   .link-hover({
