--- a/resources/assets/less/bem/nav2-header.less
+++ b/resources/assets/less/bem/nav2-header.less
@@ -32,7 +32,7 @@
     height: @nav2-header-image-height;
     background-color: fade(#111, 90%);
     transition-duration: 0s;
-    border-bottom: 1px solid @osu-colour-u;
+    border-bottom: 1px solid @osu-colour-h1;
 
     &[data-visibility=hidden] {
       transition-duration: 250ms;
