--- a/resources/assets/less/bem/osu-page-header-v3.less
+++ b/resources/assets/less/bem/osu-page-header-v3.less
@@ -37,7 +37,7 @@
     background-size: (@gutter-desktop - @_icon-margin-right - 10px);
     background-position: center;
     background-repeat: no-repeat;
-    box-shadow: inset 0 0 0 2px @osu-colour-u;
+    box-shadow: inset 0 0 0 2px @osu-colour-h1;
 
     .@{_top}--changelog & {
       background-image: url('/images/icons/changelog.svg');
@@ -72,7 +72,7 @@
   }
 
   &__title-highlight {
-    color: @osu-colour-u;
+    color: @osu-colour-h1;
   }
 
   &__title-text {
