--- a/resources/assets/less/bem/page-extra-tabs.less
+++ b/resources/assets/less/bem/page-extra-tabs.less
@@ -23,7 +23,7 @@
 
   background-color: @osu-colour-b5;
 
-  border-bottom: 1px solid @osu-colour-u;
+  border-bottom: 1px solid @osu-colour-h1;
 
   @media @mobile {
     top: @navbar-height;
@@ -32,6 +32,6 @@
   &--profile-page {
     background-color: @osu-colour-b5;
     border-bottom-width: 2px;
-    border-bottom-color: @osu-colour-u;
+    border-bottom-color: @osu-colour-h1;
   }
 }
