--- a/resources/assets/less/bem/page-extra.less
+++ b/resources/assets/less/bem/page-extra.less
@@ -132,7 +132,7 @@
   &__title {
     display: inline-block;
     color: #fff;
-    border-bottom: 2px solid @osu-colour-u;
+    border-bottom: 2px solid @osu-colour-h1;
     padding-bottom: 5px;
     margin: 0 0 20px;
     font-style: normal;
