--- a/resources/assets/less/bem/page-mode-link.less
+++ b/resources/assets/less/bem/page-mode-link.less
@@ -88,7 +88,7 @@
     height: 5px;
     transform: translateY(5px) scaleY(0);
     transition: transform 120ms ease-in-out;
-    background-color: @osu-colour-u;
+    background-color: @osu-colour-h1;
 
     &--black {
       background-color: @osu-colour-b6;
@@ -99,7 +99,7 @@
     }
 
     .@{top}--profile-page & {
-      background-color: @osu-colour-u;
+      background-color: @osu-colour-h1;
       height: 10px;
       bottom: -6px;
       border-radius: 10000px;
