--- a/resources/assets/less/bem/page-mode-v2.less
+++ b/resources/assets/less/bem/page-mode-v2.less
@@ -46,7 +46,7 @@
   }
 
   &::after {
-    background-color: @osu-colour-u;
+    background-color: @osu-colour-h1;
   }
 
   &__item {
@@ -61,7 +61,7 @@
       padding: 5px 5px 15px;
       margin: 0 5px;
 
-      color: @osu-colour-u;
+      color: @osu-colour-h1;
 
       .@{_top}--users & {
         display: none;
@@ -99,11 +99,11 @@
       transform: scaleY(1);
     }
 
-    color: @osu-colour-u;
-    .link-hover({ color: @osu-colour-u });
+    color: @osu-colour-h1;
+    .link-hover({ color: @osu-colour-h1 });
 
     &::before {
-      background-color: @osu-colour-u;
+      background-color: @osu-colour-h1;
     }
 
 
