--- a/resources/assets/less/bem/page-tabs.less
+++ b/resources/assets/less/bem/page-tabs.less
@@ -53,7 +53,7 @@
     &--active {
       //color: @osu-colour-l1;
       font-weight: 900;
-      border-bottom-color: @osu-colour-u;
+      border-bottom-color: @osu-colour-h1;
     }
 
     &--disabled {
