--- a/resources/assets/less/bem/search-entry.less
+++ b/resources/assets/less/bem/search-entry.less
@@ -26,7 +26,7 @@
   border: 2px solid transparent;
 
   &:hover {
-    border: 2px solid @osu-colour-u;
+    border: 2px solid @osu-colour-h1;
   }
 
   &__row {
