--- a/resources/assets/less/bem/simple-menu.less
+++ b/resources/assets/less/bem/simple-menu.less
@@ -161,7 +161,7 @@
         left: 10px;
         width: 3px;
         height: calc(100% - (@_item-padding-vertical * 2 + 4px));
-        background-color: @osu-colour-u;
+        background-color: @osu-colour-h1;
       }
     }
 
