--- a/resources/assets/less/bem/value-display.less
+++ b/resources/assets/less/bem/value-display.less
@@ -26,7 +26,7 @@
     height: 2px;
     display: block;
     content: '';
-    background-color: @osu-colour-u;
+    background-color: @osu-colour-h1;
     border-radius: 10000px;
     margin-bottom: 2px;
   }
@@ -37,7 +37,7 @@
   }
 
   &--kudosu::before {
-    background-color: @osu-colour-u;
+    background-color: @osu-colour-h1;
   }
 
   &--medals::before {
