--- a/resources/assets/less/sections.less
+++ b/resources/assets/less/sections.less
@@ -22,7 +22,7 @@
 .t-section {
   .u-section--bg-normal {
     // the bar that shows the section we're currently in
-    background-color: @osu-colour-u !important;
+    background-color: @osu-colour-h1 !important;
   }
 
   .u-section--color-hover {
