--- a/resources/assets/less/bem/chat-logo.less
+++ b/resources/assets/less/bem/chat-logo.less
@@ -37,7 +37,7 @@
     background-position: center;
     background-repeat: no-repeat;
 
-    box-shadow: inset 0 0 0 2px @osu-colour-u;
+    box-shadow: inset 0 0 0 2px @osu-colour-h1;
     background-image: url('/images/icons/chat.svg');
   }
 
