--- a/resources/assets/less/bem/download-page.less
+++ b/resources/assets/less/bem/download-page.less
@@ -40,7 +40,7 @@
     left: 0;
     width: 100%;
     height: 10px;
-    background-color: @osu-colour-u;
+    background-color: @osu-colour-h1;
   }
 
   &__link {
@@ -56,7 +56,7 @@
     .circle(@number-width);
     .center-content();
 
-    border: solid @osu-colour-u 2px;
+    border: solid @osu-colour-h1 2px;
     color: #fff;
     font-weight: 700;
     margin-right: @number-margin-right;
