--- a/resources/assets/less/bem/medals-group.less
+++ b/resources/assets/less/bem/medals-group.less
@@ -59,7 +59,7 @@
       left: 0;
       height: 2px;
       width: 100%;
-      background-color: @osu-colour-u;
+      background-color: @osu-colour-h1;
       border-radius: 10000px;
     }
   }
