--- a/resources/assets/less/bem/play-detail.less
+++ b/resources/assets/less/bem/play-detail.less
@@ -206,7 +206,7 @@
     flex: none;
     font-size: @font-size--title-small-3;
     font-weight: 700;
-    color: @osu-colour-u;
+    color: @osu-colour-h1;
 
     @media @desktop {
       .center-content();
