--- a/resources/assets/less/bem/user-card.less
+++ b/resources/assets/less/bem/user-card.less
@@ -48,7 +48,7 @@
     .@{top}:hover&, .@{top}--active& {
       .full-size();
       content: '';
-      border: 2px solid @osu-colour-u;
+      border: 2px solid @osu-colour-h1;
       border-radius: @card-border-radius;
       pointer-events: none;
     }
