--- a/resources/assets/less/colors.less
+++ b/resources/assets/less/colors.less
@@ -85,7 +85,7 @@
 // osu!palette 2019v2-final-copy-last-FINAL
 // The default hue is osu! pink (333) and is injected into the body via master.blade.php as var(--base-hue) within :root
 // The section-to-colour mapping is done via section_to_hue_map() in helpers.php
-@osu-colour-u: hsl(var(--base-hue), 100%, 70%);
+@osu-colour-h1: hsl(var(--base-hue), 100%, 70%);
 @osu-colour-p: hsl(var(--base-hue), 100%, 50%);
 @osu-colour-d: hsl(var(--base-hue), 50%, 45%);
 @osu-colour-l1: hsl(var(--base-hue), 40%, 70%);
